--- a/index.html
+++ b/index.html
@@ -1,2 +1,96 @@
-coming very soon!
-stay tune.
+<!DOCTYPE html>
+<html>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>daeng.id</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+   </head>
+   <body>
+      <div class="bg-warning">
+            <ul class="nav container">
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="#">
+                        <small><i class="fa fa-mobile" aria-hidden="true"></i>&nbsp&nbspalvianrht@gmail.com</small>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link text-dark" href="#">
+                        <small><i class="fa fa-phone" aria-hidden="true"></i>&nbsp&nbsp0856-0644-2737</small>
+                    </a>
+                </li>
+                <li class="nav-item  ml-md-auto"> <!-- d-none d-md-flex -->
+                    <a class="nav-link text-dark" href="#">
+                        <small>
+                            <i class="fa fa-twitter icon-pojok" aria-hidden="true"></i>
+                            <i class="fa fa-facebook icon-pojok" aria-hidden="true"></i>
+                            <i class="fa fa-windows icon-pojok" aria-hidden="true"></i>
+                            <i class="fa fa-whatsapp icon-pojok" aria-hidden="true"></i>
+                        </small>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+
+        <!-- navbar start -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height:80px;">
+            <div class="container">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar nav mr-auto ">
+                        <li class="nav-item active ">
+                            <a class="nav-link text-light" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Page</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Components</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <i class="fa fa-search text-warning search-icon" aria-hidden="true"></i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- navbar end -->
+
+        <!-- header start -->
+
+        <div class="site-wrapper">
+            <div class="site-wrapper-inner">
+                <div class="cover-container">
+                    <div class="inner cover">
+                        <h1 class="cover-heading text-light">We are Certified Enginers</h1><br>
+                        <p class="lead text-light text-heading">CONSTRUCTION SERVICES</p>
+                        <p class="lead text-heading2 text-warning">CREATIVE & PROVESIONAL</p>
+                        <p class="lead text-light text-desc">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+                        <p class="lead">
+                            <a href="#" class="btn btn-md btn-warning rounded-2 text-light font-weight-bold">KNOW MORE</a>
+                            <a href="#" class="btn btn-md btn-warning rounded-2 text-light font-weight-bold">VIEW PROJECT</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+   </body>
+</html>
